[package]
name = "dargo"
version = "0.0.6"
authors = ["DCjanus <dcjanus@dcjanus.com>"]
edition = "2018"
description = "Some useful third-party tools for Cargo"
repository = "https://github.com/DCjanus/dargo"
categories = [
    "command-line-utilities",
    "development-tools",
]
license-file = "LICENSE"
readme = "./README.MD"

[dependencies]
cargo = "0.37.0"
failure = "0.1.5"
toml_edit = "0.1.4"
structopt = "0.2.18"
log = "0.4.8"
flexi_logger = "0.14.1"
semver = "0.9.0"
colored = "1.8.0"
tabwriter = "1.1.0"
