[package]
name = "dargo"
version = "0.0.6"
authors = ["DCjanus <dcjanus@dcjanus.com>"]
edition = "2018"
description = "Some useful third-party tools for Cargo"
repository = "https://github.com/DCjanus/dargo"
categories = [
    "command-line-utilities",
    "development-tools",
]
license-file = "LICENSE"
readme = "./README.MD"

[dependencies]
anyhow = "1.0.55"
cargo = "0.60.0"
cargo-platform = "0.1.2"
toml_edit = "0.13.4"
structopt = "0.3.4"
log = "0.4.8"
flexi_logger = "0.22.3"
semver = "1.0.6"
colored = "2.0.0"
tabwriter = "1.1.0"
